<resources>
    <string name="app_name">LetsChat</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="click_here_to_register">Click here to Register</string>
    <string name="create_an_account">Create An Account</string>
    <string name="enter_username">Enter Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="write_your_message">Write your message</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_here_to_login">Click Here to Login</string>
</resources>
